--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xlx.coolweatherpractice.android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:name = "org.litepal.LitePalApplication"
+        android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,5 +20,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
